--- a/AdBlock/KeepStyle.conf
+++ b/AdBlock/KeepStyle.conf
@@ -46,4 +46,4 @@ hostname=hc-ssp.sm.cn, api.gotokeep.com, 42.187.199.248, kad.gotokeep.com
 # > 应用底部栏净化
 ^https?:\/\/api\.gotokeep\.com\/config\/v\d\/basic url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/keepStyle.js
 # > 首页信息流去广告
-https://api.gotokeep.com/twins/v4/feed/course url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/keepStyle.js
+^https?:\/\/api\.gotokeep\.com\/twins\/v4\/feed\/course url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/keepStyle.js
