--- a/AdBlock/KeepStyle.conf
+++ b/AdBlock/KeepStyle.conf
@@ -1,5 +1,5 @@
 // ==UserScript==
-// @ScriptName        Keep 净化
+// @ScriptName        Keep去广告+净化[墨鱼版]
 // @Author            @ddgksf2013
 // @ForHelp           若有屏蔽广告的需求，可公众号后台回复APP名称
 // @WechatID          公众号墨鱼手记
@@ -10,7 +10,7 @@
 // @Function          应用净化去广告
 // @Suitable          自行观看“# > ”注释内容
 // @Attention         如需引用请注明出处，谢谢合作！
-// @Version           V1.0.8
+// @Version           V1.0.9
 // @ScriptURL         https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/KeepStyle.conf
 // ==/UserScript==
 
