--- a/AdBlock/StartUp.conf
+++ b/AdBlock/StartUp.conf
@@ -3,7 +3,7 @@
 // @Author            @ddgksf2013
 // @TgChannel         𝐡𝐭𝐭𝐩𝐬://𝐭.𝐦𝐞/𝐝𝐝𝐠𝐤𝐬𝐟𝟐𝟎𝟐𝟏
 // @TgBot             https://t.me/ddgksf2013_bot
-// @WechatID          公众号墨鱼手记
+// @WechatID          公众号@墨鱼手记
 // @Feedback          💡 请通过邮件反馈问题『其它方式一概无视』：𝐝𝐝𝐠𝐤𝐬𝐟𝟐𝟎𝟏𝟑@𝟏𝟔𝟑.𝐜𝐨𝐦 💡
 // @UpdateTime        2024-04-07
 // @Please            如需引用请注明出处，谢谢合作！
@@ -43,7 +43,7 @@
 # ======= 0~9 ======= #
 
 # > Version
-^https?:\/\/2024.04.07/v2.0.468 url reject-200
+^https?:\/\/2024.04.07/v2.0.469 url reject-200
 # > 10
 ^https?:\/\/ftapi\.10jqka\.com\.cn\/futgwapi\/api\/om\/v\d\/ad\/common\/transfer url reject-200
 # > 58
