--- a/AdBlock/StartUp.conf
+++ b/AdBlock/StartUp.conf
@@ -586,7 +586,7 @@ https://ccsp-egmas.sf-express.com/cx-app-base/base/app/ad/queryAdImages url reje
 # > shixingshengxian
 ^https?:\/\/api1\.34580\.com\/wx\/Home\/AdvertisementPhotoshootRequest url reject-200
 # > sanhaodongman
-^https?:\/\/vidz\.3hxq\.cn\/api\/app\/announcements\/home url reject-dict
+^https?:\/\/vidz\.3hxq\.cn\/api\/app\/(miscs\/mine\/extensions|announcements\/home) url reject-dict
 
 
 # ======= T ======= #
