--- a/AdBlock/StartUp.conf
+++ b/AdBlock/StartUp.conf
@@ -5,7 +5,7 @@
 // @TgBot             https://t.me/ddgksf2013_bot
 // @WechatID          公众号@墨鱼手记
 // @Feedback          💡 请通过邮件反馈问题『其它方式一概无视』：𝐝𝐝𝐠𝐤𝐬𝐟𝟐𝟎𝟏𝟑@𝟏𝟔𝟑.𝐜𝐨𝐦 💡
-// @UpdateTime        2024-04-13
+// @UpdateTime        2024-04-21
 // @Please            如需引用请注明出处，谢谢合作！
 // @Function          去除APP首页启动广告和部分应用内广告，如果有需要的去除广告的APP，可以公众号后台直接回复
 // @ExtraTxt          Only provide the removal of open-screen advertisements for personally used apps
@@ -43,7 +43,7 @@
 # ======= 0~9 ======= #
 
 # > Version
-^https?:\/\/2024.04.13/v2.0.473 url reject-200
+^https?:\/\/2024.04.21/v2.0.474 url reject-200
 # > 10
 ^https?:\/\/ftapi\.10jqka\.com\.cn\/futgwapi\/api\/om\/v\d\/ad\/common\/transfer url reject-200
 # > 58
@@ -319,7 +319,7 @@ https://fbchina.flipchina.cn/v2/ad/query/* url reject-200
 ^https?:\/\/jdread-api\.jd\.com\/jdread\/api\/popup url reject-200
 # > jingxi
 ^https?:\/\/api\.m\.jd\.com\/api\?functionId=delivery_show url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/startup.js
-# > jingdong
+# > jingdong[invalid]
 ^https?:\/\/api\.m\.jd\.com\/client\.action\?functionId=(start|queryMaterialAdverts) url reject-200
 ^https?:\/\/(bdsp-x|dsp-x)\.jd\.com\/adx\/ url reject-200
 ^https?:\/\/api\.m\.jd\.com\/client\.action\?functionId=(hotWords|hotSearchTerms) url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/jd_json.js
