--- a/AdBlock/StartUp.conf
+++ b/AdBlock/StartUp.conf
@@ -5,11 +5,11 @@
 // @TgBot             https://t.me/ddgksf2013_bot
 // @WechatID          公众号@墨鱼手记
 // @Feedback          💡 请通过邮件反馈问题『其它方式一概无视』：𝐝𝐝𝐠𝐤𝐬𝐟𝟐𝟎𝟏𝟑@𝟏𝟔𝟑.𝐜𝐨𝐦 💡
-// @UpdateTime        2024-06-07
+// @UpdateTime        2024-06-08
 // @Please            如需引用请注明出处，谢谢合作！
 // @Function          去除APP首页启动广告和部分应用内广告，如果有需要的去除广告的APP，可以公众号后台直接回复
 // @ExtraTxt          Only provide the removal of open-screen advertisements for personally used apps
-// @Attention         QuantumultX能去广告，不代表能去所有广告！（应用个数：312）
+// @Attention         QuantumultX能去广告，不代表能去所有广告！（应用个数：313）
 // @Mark              名字后面的*代表该应用启动倒计时仍然存在
 // @Contributor       @blackmatrix7, @app2smile, @DivineEngine, @kyle, @Nick-workflow, @kkpp, @LE
 // @Tips              利用捷径打开URL[填写AppScheme]，即可免开屏广告打开应用，适合无法MITM的APP
@@ -635,6 +635,8 @@ https://top-widgets-api.xiaozujian.com/api/ad/config url reject-200
 ^https?:\/\/td\.cgmcare\.cn\/api\/ad url reject-200
 # > taobao
 ^https?:\/\/guide-acs\.m\.taobao\.com\/gw\/mtop\.taobao\.wireless\.home\.splash\.awesome\.get url reject-200
+# > tuantuanjiayou
+^https?:\/\/www\.zjyilin\.com\/hykweb\/\/index\/openImg url reject-200
 
 
 # ======= U ======= #
