--- a/Html/NewBing.conf
+++ b/Html/NewBing.conf
@@ -6,16 +6,16 @@
 // @TgChannel         https://t.me/ddgksf2021
 // @Contribute        https://t.me/ddgksf2013_bot
 // @Feedback          📮 ddgksf2013@163.com 📮
-// @UpdateTime        2023-04-16
+// @UpdateTime        2024-07-02
 // @Function          适用手机端Safari、Alook、Chrome
 // @Attention         如需引用请注明出处，谢谢合作！
-// @Version           V1.0.3
+// @Version           V1.0.4
 // @ScriptURL         https://github.com/ddgksf2013/Rewrite/raw/master/Html/NewBing.conf
 // ==/UserScript==
 
 
 //墨鱼改进版：在@NobyDa的基础上增加了web域名匹配，主要墨鱼使用NobyDa的重写一直不成功，便自己抓包折腾了下
-
+//注释本重写
 
 
 
@@ -23,4 +23,4 @@
 
 hostname = www.bing.com
 
-^https?:\/\/www\.bing\.com\/(search|new|web) url request-header (\r\nUser-Agent:.+?)\w+\/[\d\.]+(\r\n) request-header $1AppleWebKit/537.36 Chrome/110.0 Safari/537.36 Edg/110.0$2
+#^https?:\/\/www\.bing\.com\/(search|new|web) url request-header (\r\nUser-Agent:.+?)\w+\/[\d\.]+(\r\n) request-header $1AppleWebKit/537.36 Chrome/110.0 Safari/537.36 Edg/110.0$2
