--- a/Html/NewBing.conf
+++ b/Html/NewBing.conf
@@ -23,4 +23,4 @@
 
 hostname = www.bing.com
 
-#^https?:\/\/www\.bing\.com\/(search|new|web) url request-header (\r\nUser-Agent:.+?)\w+\/[\d\.]+(\r\n) request-header $1AppleWebKit/537.36 Chrome/110.0 Safari/537.36 Edg/110.0$2
+^https?:\/\/www\.bing\.com\/(search|new|web) url request-header (\r\n)(User-Agent:.+)(\r\n) request-header $1$2$3
