--- a/Html/NewBing.conf
+++ b/Html/NewBing.conf
@@ -14,8 +14,8 @@
 // ==/UserScript==
 
 
-//墨鱼改进版：在@NobyDa的基础上增加了web域名匹配，主要墨鱼使用NobyDa的重写一直不成功，便自己抓包折腾了下
-//注释本重写
+
+//20240702 由于用户使用本重写导致bing搜索被屏蔽，故注释本重写
 
 
 
