--- a/AdBlock/StartUp.conf
+++ b/AdBlock/StartUp.conf
@@ -5,7 +5,7 @@
 // @TgBot             https://t.me/ddgksf2013_bot
 // @WechatID          墨鱼手记
 // @Feedback          💡 请通过邮件反馈问题『其它方式一概无视』：𝐝𝐝𝐠𝐤𝐬𝐟𝟐𝟎𝟏𝟑@𝟏𝟔𝟑.𝐜𝐨𝐦 💡
-// @UpdateTime        2024-07-30
+// @UpdateTime        2024-08-01
 // @Please            如需引用请注明出处，谢谢合作！
 // @Function          去除APP首页启动广告和部分应用内广告，如果有需要的去除广告的APP，可自行在共享表格中添加需求
 // @AddRequest        https://bit.ly/addRequestforAdBlock
@@ -43,7 +43,7 @@
 # ======= 0~9 ======= #
 
 # > Version
-^https?:\/\/2024.07.30/v2.0.498 url reject-200
+^https?:\/\/2024.07.30/c324/v2.0.498 url reject-200
 # > 10
 ^https?:\/\/ftapi\.10jqka\.com\.cn\/futgwapi\/api\/om\/v\d\/ad\/common\/transfer url reject-200
 # > 139mail
@@ -140,8 +140,6 @@ https://beta-api.crunchyroll.com/cms url response-body offset_ms":\d+ response-b
 ^https?:\/\/emdcadvertise\.eastmoney\.com\/infoService\/v\d url reject-200
 # > caijingzazhi
 ^https?:\/\/api\.caijingmobile\.com\/(ad|advert)\/ url reject-200
-# > caiyun
-^https:\/\/api\.caiyunapp\.com\/v1\/activity url reject-200
 # > ciweimaoyuedu
 ^https?:\/\/app\.hbooker\.com\/setting\/get_startpage_url_list url reject-200
 # > cainiao
@@ -489,6 +487,8 @@ https?:\/\/helper\.2bulu\.com\/(greenPea\/queryTasks|proSpecial\/allData|saveSpl
 ^https?:\/\/app-api\.medsci\.cn\/app-advertisement-space\/showAdList url reject-200
 # > moomoo
 ^https?:\/\/api\.moomoo\.com(\/v\d)?\/ad url reject-200
+# > miaojie
+^https?:\/\/acs\.m\.taobao\.com\/gw\/mtop\.alibaba\.mos\.app\.homepage\.launch url reject-200
 
 
 # ======= N ======= #
