--- a/AdBlock/CaiYunAds.conf
+++ b/AdBlock/CaiYunAds.conf
@@ -10,7 +10,7 @@
 // @UpdateTime        2024-08-01
 // @Suitable          自行观看“# > ”注释内容
 // @Attention         如需引用请注明出处，谢谢合作！
-// @Version           V1.0.1
+// @Version           V1.0.2
 // @ScriptURL         https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/CaiYunAds.conf
 // ==/UserScript==
 
@@ -34,7 +34,7 @@ hostname = wrapper.cyapi.cn, api.caiyunapp.com, starplucker.cyapi.cn, ad.cyapi.c
 ^https?:\/\/starplucker\.cyapi\.cn/v\d/operation/banners url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/caiyun_json.js
 # > 发现页中间部分@ddgksf2013
 ^https?:\/\/starplucker\.cyapi\.cn/v\d/operation/features url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/caiyun_json.js
-# > 发现页banners@ddgksf2013
+# > 发现页活动@ddgksf2013
 ^https?:\/\/starplucker\.cyapi\.cn/v\d/campaigns url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/caiyun_json.js
 # > 通用广告请求@ddgksf2013
 ^https?:\/\/ad.cyapi.cn/v\d url reject-200
