--- a/AdBlock/StartUp.conf
+++ b/AdBlock/StartUp.conf
@@ -44,7 +44,7 @@
 # ======= 0~9 ======= #
 
 # > Version
-^https?:\/\/2024.08.04/c325/v2.0.500 url reject-200
+^https?:\/\/2024.08.04/c325/v2.0.501 url reject-200
 # > 10
 ^https?:\/\/ftapi\.10jqka\.com\.cn\/futgwapi\/api\/om\/v\d\/ad\/common\/transfer url reject-200
 # > 139mail
@@ -616,7 +616,7 @@ https://ccsp-egmas.sf-express.com/cx-app-base/base/app/ad/queryAdImages url reje
 # > suishenxing
 ^https?:\/\/m-adphone\.wenhua\.com\.cn\/ url reject-200
 # > shenmezhidemai
-^https?:\/\/app-api\.smzdm\.com\/util\/loading url script-response-body https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/script/smzdm/smzdm_remove_ads.js
+^https?:\/\/app-api\.smzdm\.com\/util\/loading url response-body start_date":"\d{4} response-body start_date":"4099
 
 
 # ======= T ======= #
