--- a/AdBlock/CaiYunAds.conf
+++ b/AdBlock/CaiYunAds.conf
@@ -7,10 +7,10 @@
 // @TgChannel         https://t.me/ddgksf2021
 // @Contribute        https://t.me/ddgksf2013_bot
 // @Feedback          📮 ddgksf2013@163.com 📮
-// @UpdateTime        2024-08-02
+// @UpdateTime        2024-08-06
 // @Suitable          自行观看“# > ”注释内容
 // @Attention         如需引用请注明出处，谢谢合作！
-// @Version           V1.0.4
+// @Version           V1.0.5
 // @ScriptURL         https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/CaiYunAds.conf
 // ==/UserScript==
 
@@ -41,4 +41,4 @@ hostname = wrapper.cyapi.cn, api.caiyunapp.com, starplucker.cyapi.cn, ad.cyapi.c
 # > 发现页活动@ddgksf2013
 ^https?:\/\/starplucker\.cyapi\.cn/v\d/campaigns url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/caiyun_json.js
 # > 通用广告请求@ddgksf2013
-^https?:\/\/ad.cyapi.cn/v\d url reject-200
+^https?:\/\/ad\.cyapi\.cn\/v\d url reject-200
