--- a/AdBlock/CaiYunAds.conf
+++ b/AdBlock/CaiYunAds.conf
@@ -27,18 +27,18 @@ hostname = wrapper.cyapi.cn, api.caiyunapp.com, starplucker.cyapi.cn, ad.cyapi.c
 # > 活动推广@ddgksf2013
 ^https?:\/\/api\.caiyunapp\.com\/v\d\/activity url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/caiyun_json.js
 # > 首页顶部推广@ddgksf2013
-^https?:\/\/starplucker\.cyapi\.cn/v\d/operation/homefeatures url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/caiyun_json.js
+^https?:\/\/starplucker\.cyapi\.cn\/v\d/operation/homefeatures url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/caiyun_json.js
 # > SVIP提醒推广@ddgksf2013
-^https?:\/\/starplucker\.cyapi\.cn/v\d/notification/message_center url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/caiyun_json.js
+^https?:\/\/starplucker\.cyapi\.cn\/v\d/notification/message_center url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/caiyun_json.js
 # > 雨季特惠提醒@ddgksf2013
-^https?:\/\/starplucker\.cyapi\.cn/v\d/config/cypage url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/caiyun_json.js
+^https?:\/\/starplucker\.cyapi\.cn\/v\d/config/cypage url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/caiyun_json.js
 # > 发现页信息流推荐@ddgksf2013
-^https?:\/\/starplucker\.cyapi\.cn/v\d/operation/feeds url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/caiyun_json.js
+^https?:\/\/starplucker\.cyapi\.cn\/v\d/operation/feeds url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/caiyun_json.js
 # > 发现页banners@ddgksf2013
-^https?:\/\/starplucker\.cyapi\.cn/v\d/operation/banners url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/caiyun_json.js
+^https?:\/\/starplucker\.cyapi\.cn\/v\d/operation/banners url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/caiyun_json.js
 # > 发现页中间部分@ddgksf2013
-^https?:\/\/starplucker\.cyapi\.cn/v\d/operation/features url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/caiyun_json.js
+^https?:\/\/starplucker\.cyapi\.cn\/v\d/operation/features url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/caiyun_json.js
 # > 发现页活动@ddgksf2013
-^https?:\/\/starplucker\.cyapi\.cn/v\d/campaigns url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/caiyun_json.js
+^https?:\/\/starplucker\.cyapi\.cn\/v\d/campaigns url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/caiyun_json.js
 # > 通用广告请求@ddgksf2013
 ^https?:\/\/ad\.cyapi\.cn\/v\d url reject-200
