--- a/AdBlock/CaiYunAds.conf
+++ b/AdBlock/CaiYunAds.conf
@@ -10,7 +10,7 @@
 // @UpdateTime        2024-09-01
 // @Suitable          自行观看“# > ”注释内容
 // @Attention         如需引用请注明出处，谢谢合作！
-// @Version           V1.0.6
+// @Version           V1.0.7
 // @ScriptURL         https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/CaiYunAds.conf
 // ==/UserScript==
 
@@ -19,7 +19,7 @@
 hostname = wrapper.cyapi.cn, api.caiyunapp.com, starplucker.cyapi.cn, ad.cyapi.cn, biz.cyapi.cn
 
 # > 伪装VIP解锁48小时降水[需登录][新验证接口]@ddgksf2013
-^https?:\/\/biz\.cyapi\.cn\/v\d\/user_detail url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/caiyun_json.js
+^https?:\/\/biz\.cyapi\.cn\/api\/v\d\/user_detail url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/caiyun_json.js
 # > 伪装VIP解锁48小时降水[需登录]@ddgksf2013
 ^https?:\/\/biz\.cyapi\.cn\/v\d\/user url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/caiyun_json.js
 # > 图层推广@ddgksf2013
