--- a/AdBlock/NeteaseAds.conf
+++ b/AdBlock/NeteaseAds.conf
@@ -6,10 +6,10 @@
 // @TgChannel         https://t.me/ddgksf2021
 // @Contribute        https://t.me/ddgksf2013_bot
 // @Feedback          📮 ddgksf2013@163.com 📮
-// @UpdateTime        2024-09-05
+// @UpdateTime        2024-09-06
 // @Suitable          自行观看“# > ”注释内容
 // @Attention         如需引用请注明出处，谢谢合作！
-// @Version           V1.0.28
+// @Version           V1.0.29
 // @RewriteURL        https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/NeteaseAds.conf
 // ==/UserScript==
 
@@ -77,3 +77,5 @@ hostname = interface*.music.163.com
 # ======= 网易云歌曲区 ======= #
 # > 评论区@ddgksf2013
 ^https?:\/\/interface(\d)?\.music\.163\.com\/e?api\/batch url script-response-body https://gist.githubusercontent.com/ddgksf2013/4f53b7c6083678df25fecc8ff68b52c4/raw/netease.adblock.js
+# > 评论推广@ddgksf2013
+^https?:\/\/interface(\d)?\.music\.163\.com\/w?eapi\/(resource-exposure\/)?activity url reject-200
