--- a/AdBlock/NeteaseAds.conf
+++ b/AdBlock/NeteaseAds.conf
@@ -75,7 +75,9 @@ hostname = interface*.music.163.com
 
 
 # ======= 网易云歌曲区 ======= #
-# > 评论区@ddgksf2013
+# > 评论区推广插入@ddgksf2013
 ^https?:\/\/interface(\d)?\.music\.163\.com\/e?api\/batch url script-response-body https://gist.githubusercontent.com/ddgksf2013/4f53b7c6083678df25fecc8ff68b52c4/raw/netease.adblock.js
 # > 评论推广@ddgksf2013
 ^https?:\/\/interface(\d)?\.music\.163\.com\/w?eapi\/(resource-exposure\/)?activity url reject-200
+# > 评论区推广插入@ddgksf2013
+^https?:\/\/interface(\d)?\.music\.163\.com\/e?api\/comment\/feed\/inserted\/resources url reject-200
