--- a/AdBlock/NeteaseAds.conf
+++ b/AdBlock/NeteaseAds.conf
@@ -61,7 +61,8 @@ hostname = interface*.music.163.com
 ^https?:\/\/interface(\d)?\.music\.163\.com\/e?api\/content\/activity\/music\/jar\/template\/list url reject-200
 # > 弹窗免费听歌@ddgksf2013
 ^https?:\/\/interface(\d)?\.music\.163\.com\/e?api\/vip\/cashier\/tspopup\/get url script-response-body https://gist.githubusercontent.com/ddgksf2013/4f53b7c6083678df25fecc8ff68b52c4/raw/netease.adblock.js
-
+# > 启动领VIP弹窗@ddgksf2013
+^https?:\/\/interface(\d)?\.music\.163\.com\/e?api\/sp\/flow\/popup\/query url reject-200
 
 # ======= 网易云侧栏区 ======= #
 # > 侧栏账户@ddgksf2013
@@ -72,7 +73,12 @@ hostname = interface*.music.163.com
 ^https?:\/\/interface(\d)?\.music\.163\.com\/e?api\/delivery\/deliver url script-response-body https://gist.githubusercontent.com/ddgksf2013/4f53b7c6083678df25fecc8ff68b52c4/raw/netease.adblock.js
 # > 侧边浮层@ddgksf2013
 ^https?:\/\/interface(\d)?\.music\.163\.com\/e?api\/delivery\/batch-deliver url script-response-body https://gist.githubusercontent.com/ddgksf2013/4f53b7c6083678df25fecc8ff68b52c4/raw/netease.adblock.js
-
+# > 优惠券@ddgksf2013
+^https?:\/\/interface(\d)?\.music\.163\.com\/e?api\/vipmall\/couponcfg\/get url reject-200
+# > 侧边兑换黑胶Tips@ddgksf2013
+^https?:\/\/interface(\d)?\.music\.163\.com\/e?api\/yunbei\/account\/entrance\/get url reject-200
+# > 侧边创作福利@ddgksf2013
+^https?:\/\/interface(\d)?\.music\.163\.com\/e?api\/creator\/musician\/reminder\/message\/get url reject-200
 
 # ======= 网易云歌曲区 ======= #
 # > 评论区插入推广@ddgksf2013
