--- a/AdBlock/NeteaseAds.conf
+++ b/AdBlock/NeteaseAds.conf
@@ -76,9 +76,9 @@ hostname = interface*.music.163.com
 # > 优惠券@ddgksf2013
 ^https?:\/\/interface(\d)?\.music\.163\.com\/e?api\/vipmall\/couponcfg\/get url reject-200
 # > 侧边兑换黑胶Tips@ddgksf2013
-^https?:\/\/interface(\d)?\.music\.163\.com\/e?api\/yunbei\/account\/entrance\/get url reject-200
+^https?:\/\/interface(\d)?\.music\.163\.com\/e?api\/yunbei\/account\/entrance\/get url script-response-body https://gist.githubusercontent.com/ddgksf2013/4f53b7c6083678df25fecc8ff68b52c4/raw/netease.adblock.js
 # > 侧边创作福利@ddgksf2013
-^https?:\/\/interface(\d)?\.music\.163\.com\/e?api\/creator\/musician\/reminder\/message\/get url reject-200
+^https?:\/\/interface(\d)?\.music\.163\.com\/e?api\/creator\/musician\/reminder\/message\/get url script-response-body https://gist.githubusercontent.com/ddgksf2013/4f53b7c6083678df25fecc8ff68b52c4/raw/netease.adblock.js
 
 # ======= 网易云歌曲区 ======= #
 # > 评论区插入推广@ddgksf2013
