--- a/AdBlock/StartUp.conf
+++ b/AdBlock/StartUp.conf
@@ -44,7 +44,7 @@
 # ======= 0~9 ======= #
 
 # > Version
-^https?:\/\/2024.09.07/c335/v2.0.522 url reject-200
+^https?:\/\/2024.09.11/c335/v2.0.523 url reject-200
 # > 10
 ^https?:\/\/ftapi\.10jqka\.com\.cn\/futgwapi\/api\/om\/v\d\/ad\/common\/transfer url reject-200
 # > 139mail
@@ -538,6 +538,7 @@ https://access.mypikpak.com/access_controller/v1/area_accessible url reject-200
 # > pufayinhang
 ^https?:\/\/lban\.spdb\.com\.cn\/mspmk-web-component\/(getAdvList|prefetchAdvList)\.ah url reject-200
 # > pupumarket
+^https?:\/\/j1\.pupuapi\.com\/client\/marketing\/advertisement url reject-200
 ^https?:\/\/j1\.pupuapi\.com\/client\/marketing\/banner\/v\d\?position url script-response-body https://raw.githubusercontent.com/ddgksf2013/Scripts/master/pupumarket.js
 # > pica
 ^https?:\/\/.*tipatipa\.xyz\/announcements url reject-200
