--- a/AdBlock/StartUp.conf
+++ b/AdBlock/StartUp.conf
@@ -7,10 +7,10 @@
 // @Feedback          💡 请通过邮件反馈问题『其它方式一概无视』：𝐝𝐝𝐠𝐤𝐬𝐟𝟐𝟎𝟏𝟑@𝟏𝟔𝟑.𝐜𝐨𝐦 💡
 // @UpdateTime        2024-09-27
 // @Please            如需引用请注明出处，谢谢合作！
-// @Function          去除APP首页启动广告和部分应用内广告，如果有需要的去除广告的APP，可自行在共享表格中添加需求
+// @Function          去除APP首页启动广告和部分应用内广告，如果有需要的去除开屏广告的APP，可自行在共享表格中添加需求
 // @AddRequest        https://bit.ly/addRequestforAdBlock
 // @ExtraTxt          Only provide the removal of open-screen advertisements for personally used apps
-// @Attention         QuantumultX能去广告，不代表能去所有广告！（应用个数：340）
+// @Attention         QuantumultX能去广告，不代表能去所有广告！（应用个数：344）
 // @Mark              名字后面的*代表该应用启动倒计时仍然存在
 // @Contributor       @blackmatrix7, @app2smile, @DivineEngine, @kyle, @Nick-workflow, @kkpp, @LE
 // @Tips              利用捷径打开URL[填写AppScheme]，即可免开屏广告打开应用，适合无法MITM的APP
@@ -44,7 +44,7 @@
 # ======= 0~9 ======= #
 
 # > Version
-^https?:\/\/2024.09.27/c344/v2.0.530 url reject-200
+^https?:\/\/2024.09.27/c344/v2.0.531 url reject-200
 # > 10
 ^https?:\/\/ftapi\.10jqka\.com\.cn\/futgwapi\/api\/om\/v\d\/ad\/common\/transfer url reject-200
 # > 139mail
