--- a/AdBlock/NeteaseAds.conf
+++ b/AdBlock/NeteaseAds.conf
@@ -6,10 +6,10 @@
 // @TgChannel         https://t.me/ddgksf2021
 // @Contribute        https://t.me/ddgksf2013_bot
 // @Feedback          📮 ddgksf2013@163.com 📮
-// @UpdateTime        2024-09-08
+// @UpdateTime        2024-10-11
 // @Suitable          自行观看“# > ”注释内容
 // @Attention         如需引用请注明出处，谢谢合作！
-// @Version           V1.0.30
+// @Version           V1.0.31
 // @RewriteURL        https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/NeteaseAds.conf
 // ==/UserScript==
 
@@ -89,3 +89,7 @@ hostname = interface*.music.163.com
 ^https?:\/\/interface(\d)?\.music\.163\.com\/e?api\/comment\/feed\/inserted\/resources url reject-200
 # > 购买实体专辑@ddgksf2013
 ^https?:\/\/interface(\d)?\.music\.163\.com\/e?api\/resource-exposure\/config url reject-200
+
+# ======= 网易云请求区 ======= #
+# > 删除AEAPI[临时法，等待逆向佬解密aeapi]
+^https?:\/\/interface(\d)?\.music\.163\.com\/e?api\/ url script-request-header https://github.com/ddgksf2013/Scripts/raw/master/deleteAeapi.js
