--- a/AdBlock/Weibo.conf
+++ b/AdBlock/Weibo.conf
@@ -1,6 +1,6 @@
 // ==UserScript==
 // @ScriptName        微博&微博国际版净化[墨鱼版]
-// @Author            @ddgksf2013,
+// @Author            @ddgksf2013
 // @WechatID          墨鱼手记
 // @TgChannel         https://t.me/ddgksf2021
 // @Contribute        https://t.me/ddgksf2013_bot
