--- a/AdBlock/XiaoHongShu.conf
+++ b/AdBlock/XiaoHongShu.conf
@@ -22,7 +22,7 @@ hostname = edith.xiaohongshu.com, www.xiaohongshu.com, pages.xiaohongshu.com, re
 # > 小红书_Live图片去水印@ddgksf2013
 ^https?:\/\/edith\.xiaohongshu\.com\/api\/sns\/v\d\/note\/live_photo\/save url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/redbook_json.js
 # > 小红书_通用广告请求@ddgksf2013
-^https?:\/\/edith\.xiaohongshu\.com\/api\/sns\/v\d\/system_service\/splash reject-200
+^https?:\/\/edith\.xiaohongshu\.com\/api\/sns\/v\d\/system_service\/splash url reject-200
 # > 小红书_搜索结果推荐广告@ddgksf2013
 ^https?:\/\/edith\.xiaohongshu\.com\/api\/sns\/v\d+\/search\/notes\? url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/redbook_json.js
 # > 小红书_视频播放页商品推广@ddgksf2013
