--- a/AdBlock/XiaoHongShu.conf
+++ b/AdBlock/XiaoHongShu.conf
@@ -1,6 +1,6 @@
 
 // ==UserScript==
-// @ScriptName        小红书净化+功能增强(墨鱼版)
+// @ScriptName        小红书净化+功能增强[墨鱼版]
 // @Author            @ddgksf2013
 // @ForHelp           若有屏蔽广告的需求，可公众号后台回复APP名称
 // @WechatID          墨鱼手记
@@ -19,6 +19,8 @@
 hostname = edith.xiaohongshu.com, www.xiaohongshu.com, pages.xiaohongshu.com, referee.xiaohongshu.com
 
 
+# > 小红书_评论区处理@ddgksf2013
+^https?:\/\/edith\.xiaohongshu\.com\/api\/sns\/v\d\/note\/comment\/list url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/redbook_json.js
 # > 小红书_Live图片去水印@ddgksf2013
 ^https?:\/\/edith\.xiaohongshu\.com\/api\/sns\/v\d\/note\/live_photo\/save url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/redbook_json.js
 # > 小红书_通用广告请求@ddgksf2013
