--- a/AdBlock/XiaoHongShu.conf
+++ b/AdBlock/XiaoHongShu.conf
@@ -19,7 +19,7 @@
 hostname = edith.xiaohongshu.com, www.xiaohongshu.com, pages.xiaohongshu.com, referee.xiaohongshu.com
 
 
-# > 小红书_评论区处理@ddgksf2013
+# > 小红书_评论区图片处理[网络活动直接搜PRV该链接即是评论区无水印图片链接]@ddgksf2013
 ^https?:\/\/edith\.xiaohongshu\.com\/api\/sns\/v\d\/note\/comment\/list url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/redbook_json.js
 # > 小红书_Live图片去水印@ddgksf2013
 ^https?:\/\/edith\.xiaohongshu\.com\/api\/sns\/v\d\/note\/live_photo\/save url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/redbook_json.js
