--- a/AdBlock/StartUp.conf
+++ b/AdBlock/StartUp.conf
@@ -44,7 +44,7 @@
 # ======= 0~9 ======= #
 
 # > Version
-^https?:\/\/2024.12.04/c358/v2.0.555 url reject-200
+^https?:\/\/2024.12.04/c358/v2.0.556 url reject-200
 # > 10
 ^https?:\/\/ftapi\.10jqka\.com\.cn\/futgwapi\/api\/om\/v\d\/ad\/common\/transfer url reject-200
 # > 139mail
@@ -160,7 +160,7 @@ https://beta-api.crunchyroll.com/cms url response-body offset_ms":\d+ response-b
 ^https?:\/\/api3\.cls\.cn\/v1\/boot\/ad url reject-200
 # > caixin
 ^https?:\/\/gg\.caixin\.com\/s\?z=caixin&op=1&c=3362 url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/caixinads.js
-^https?:\/\/pinggai*.caixin\.com\/s\?z=caixin url reject-200
+^https?:\/\/pinggai.*caixin\.com\/s\?z=caixin url reject-200
 
 
 # ======= D ======= #
