--- a/AdBlock/XiaoHongShu.conf
+++ b/AdBlock/XiaoHongShu.conf
@@ -17,7 +17,8 @@
 
 hostname = *.xiaohongshu.com
 
-
+# > 小红书_视频保存@ddgksf2013
+^https?:\/\/[a-z]+\.xiaohongshu\.com\/api\/sns\/v\d\/note\/video\/save url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/redbook_json.js
 # > 小红书_评论区图片处理@ddgksf2013
 ^https?:\/\/[a-z]+\.xiaohongshu\.com\/api\/sns\/v\d\/note\/comment\/list url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/redbook_json.js
 # > 小红书_Live图片去水印@ddgksf2013
