--- a/AdBlock/BilibiliAds.conf
+++ b/AdBlock/BilibiliAds.conf
@@ -90,6 +90,11 @@
 //2024-02-07 66、添加哔哩哔哩普通视频解锁1080P高码率和4K视频版本备注7.65
 //2024-02-25 67、去掉屏蔽视频4480端口的重写
 //2024-05-06 68、修复哔哩哔哩V7.77.0新版我的页面收藏按钮消失的BUG
+//2025-03-09 69、若你在使用新版B站遇到闪退[QX下]，请将grpc.biliapi.net添加屏蔽；解决首页刷新异常问题；将bilibili_protobuf脚本由@BiliUniverse换至@kokoryh
+
+
+
+
 
 hostname = -broadcast.chat.bilibili.com, -cm.bilibili.com, -*cdn*.biliapi.net, -*tracker*.biliapi.net, app.bilibili.com, api.live.bilibili.com, *.bilibili.com, *.bili*.*, *.bilibili.*, grpc.biliapi.net,*biliapi.net
 
