--- a/AdBlock/BilibiliAds.conf
+++ b/AdBlock/BilibiliAds.conf
@@ -139,7 +139,7 @@ hostname = -broadcast.chat.bilibili.com, -cm.bilibili.com, -*cdn*.biliapi.net, -
 # ～ BiliBili_哔哩哔哩_漫画去广告@ddgksf2013
 ^https?:\/\/manga\.bilibili\.com\/twirp\/comic\.v\d\.Comic\/(Flash|ListFlash|GetActivityTab) url reject-dict
 # ～ BiliBili_哔哩哔哩_推荐去广告@ddgksf2013
-^https?:\/\/app\.bilibili\.com\/x\/v2\/feed\/index url script-request-header https://raw.githubusercontent.com/ddgksf2013/Scripts/refs/heads/master/bilibili_tmp.js
+#^https?:\/\/app\.bilibili\.com\/x\/v2\/feed\/index url script-request-header https://raw.githubusercontent.com/ddgksf2013/Scripts/refs/heads/master/bilibili_tmp.js
 #^https?:\/\/app\.bilibili\.com\/x\/v2\/feed\/index url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/bilibili_json.js
 # ～ BiliBili_哔哩哔哩_追番去广告@ddgksf2013
 ^https?:\/\/api\.(bilibili|biliapi)\.(com|net)\/pgc\/page\/bangumi url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/bilibili_json.js
