--- a/AdBlock/BilibiliAds.conf
+++ b/AdBlock/BilibiliAds.conf
@@ -90,7 +90,7 @@
 //2024-02-07 66、添加哔哩哔哩普通视频解锁1080P高码率和4K视频版本备注7.65
 //2024-02-25 67、去掉屏蔽视频4480端口的重写
 //2024-05-06 68、修复哔哩哔哩V7.77.0新版我的页面收藏按钮消失的BUG
-//2025-03-09 69、若你在使用新版B站遇到闪退[QX下]，请将grpc.biliapi.net添加屏蔽；解决首页刷新异常问题；将bilibili_protobuf脚本由@BiliUniverse换至@kokoryh
+//2025-03-09 69、若你在使用新版B站遇到闪退[QX下]，请将grpc.biliapi.net添加屏蔽；将bilibili_protobuf脚本由@BiliUniverse换至@kokoryh
 
 
 
@@ -139,8 +139,7 @@ hostname = -broadcast.chat.bilibili.com, -cm.bilibili.com, -*cdn*.biliapi.net, -
 # ～ BiliBili_哔哩哔哩_漫画去广告@ddgksf2013
 ^https?:\/\/manga\.bilibili\.com\/twirp\/comic\.v\d\.Comic\/(Flash|ListFlash|GetActivityTab) url reject-dict
 # ～ BiliBili_哔哩哔哩_推荐去广告@ddgksf2013
-#^https?:\/\/app\.bilibili\.com\/x\/v2\/feed\/index url script-request-header https://raw.githubusercontent.com/ddgksf2013/Scripts/refs/heads/master/bilibili_tmp.js
-#^https?:\/\/app\.bilibili\.com\/x\/v2\/feed\/index url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/bilibili_json.js
+^https?:\/\/app\.bilibili\.com\/x\/v2\/feed\/index url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/bilibili_json.js
 # ～ BiliBili_哔哩哔哩_追番去广告@ddgksf2013
 ^https?:\/\/api\.(bilibili|biliapi)\.(com|net)\/pgc\/page\/bangumi url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/bilibili_json.js
 # ～ BiliBili_哔哩哔哩_观影页面去广告@ddgksf2013
