--- a/AdBlock/BilibiliAds.conf
+++ b/AdBlock/BilibiliAds.conf
@@ -91,6 +91,7 @@
 //2024-02-25 67、去掉屏蔽视频4480端口的重写
 //2024-05-06 68、修复哔哩哔哩V7.77.0新版我的页面收藏按钮消失的BUG
 //2025-03-09 69、若你在使用新版B站遇到闪退[QX下]，请将grpc.biliapi.net添加屏蔽；将bilibili_protobuf脚本由@BiliUniverse换至@kokoryh
+//2025-03-10 70、首页刷新异常的说明：https://t.me/ddgksf2021/6837
 
 
 
