--- a/AdBlock/StartUp.conf
+++ b/AdBlock/StartUp.conf
@@ -968,6 +968,7 @@ https?:\/\/m\.sd\.10086\.cn\/zapi\/app_common\/homeWelcome\/welcome.do url rejec
 # > zhongguoyinhang
 #^https?:\/\/mbs\.boc\.cn\/ubas-mgateway-static\/images\/advertType\/.+.jpg url reject-img
 # > zhongguotianqi
+^https?:\/\/[a-zA-Z0-9_-]+\.admobile.top\/ url reject-200
 ^https?:\/\/[a-zA-Z0-9_-]+\.ranfenghd\.com\/ad url reject-200
 ^https?:\/\/[a-zA-Z0-9_-]+\.tianmu\.mobi\/ad url reject-200
 ^https?:\/\/[a-zA-Z0-9_-]+\.weathercn\.com\/(.*bypage|appindexicon) url reject-200
