--- a/AdBlock/TieBaAds.conf
+++ b/AdBlock/TieBaAds.conf
@@ -31,7 +31,5 @@ IP-CIDR,180.76.76.200/32,REJECT
 ^https?:\/\/tieba(c)?\.baidu\.com\/mo\/q\/search\/startPage url jsonjq-response-body 'del(.data)'
 # > 页面中部广告@ddgksf2013
 ^https?:\/\/tieba(c)?\.baidu\.com\/c\/f\/ad\/getFeedAd url reject-200
-# > 页面推广@app2smile
-^https?:\/\/tieba(c)?\.baidu\.com\/c\/f\/pb\/page\?cmd url script-response-body https://raw.githubusercontent.com/app2smile/rules/master/js/tieba-proto.js
-# > 信息流推广@app2smile
-^https?:\/\/tieba(c)?\.baidu\.com\/c\/f\/excellent\/personalized\?cmd url script-response-body https://raw.githubusercontent.com/app2smile/rules/master/js/tieba-proto.js
+# > 贴吧proto处理@app2smile
+^http(s:\/\/tiebac|:\/\/c\.tieba)\.baidu\.com\/c\/f\/(frs\/(page|threadlist|generalTabList)|pb\/page|excellent\/personalized)\?cmd url script-response-body https://raw.githubusercontent.com/app2smile/rules/master/js/tieba-proto.js
