--- a/AdBlock/Weibo.conf
+++ b/AdBlock/Weibo.conf
@@ -160,7 +160,7 @@ host, adstrategy.biz.weibo.com, reject
 # > 微博_非会员设置tab皮肤@zmqcherish
 ^https://new.vip.weibo.cn/littleskin/preview url script-response-body https://raw.githubusercontent.com/ddgksf2013/Scripts/refs/heads/master/weibo_json.js
 # > 微博_去广告以及去除各部分推广模块@zmqcherish,@ddgksf2013
-^https?:\/\/m?api\.weibo\.c(n|om)\/\d\/(searchall|page\?|flowage) url script-response-body https://raw.githubusercontent.com/ddgksf2013/Scripts/refs/heads/master/weibo_json.js
+^https?:\/\/m?api\.weibo\.c(n|om)\/\d\/(searchall|page\?|flowpage) url script-response-body https://raw.githubusercontent.com/ddgksf2013/Scripts/refs/heads/master/weibo_json.js
 ^https?:\/\/m?api\.weibo\.c(n|om)\/\d\/statuses/(unread_)?friends(/|_)timeline url script-response-body https://raw.githubusercontent.com/ddgksf2013/Scripts/refs/heads/master/weibo_json.js
 ^https?:\/\/m?api\.weibo\.c(n|om)\/\d\/groups/timeline url script-response-body https://raw.githubusercontent.com/ddgksf2013/Scripts/refs/heads/master/weibo_json.js
 ^https?:\/\/m?api\.weibo\.c(n|om)\/\d\/statuses/(container_timeline|unread_hot_timeline|extend|video_mixtimeline|unread_topic_timeline) url script-response-body https://raw.githubusercontent.com/ddgksf2013/Scripts/refs/heads/master/weibo_json.js
