--- a/AdBlock/XiaoHongShuAds.conf
+++ b/AdBlock/XiaoHongShuAds.conf
@@ -5,7 +5,7 @@
 // @WechatID          墨鱼手记
 // @TgChannel         https://t.me/ddgksf2021
 // @Contribute        https://t.me/ddgksf2013_bot
-// @MainFunction      去开屏、瀑布流、启动服务广告及一些隐私、广告、青少年请求，去水印及功能增强
+// @MainFunction      去除开屏、瀑布流及启动服务广告，屏蔽隐私与青少年请求，去除帖子图片、Live 图及视频的水印[评论区图水印未处理]，功能增强与体验优化
 // @Feedback          📮 ddgksf2013@163.com 📮
 // @UpdateTime        2025-04-13
 // @Attention         请在QuantumultX配置文件的[general]下添加 udp_drop_list=443
