--- a/AdBlock/GoofishAds.conf
+++ b/AdBlock/GoofishAds.conf
@@ -9,7 +9,7 @@
 // @Feedback          📮 ddgksf2013@163.com 📮
 // @UpdateTime        2025-09-06
 // @Suitable          自行观看“# > ”注释内容
-// @Attention         使用前请卸载高德地图，挂载脚本然后使用
+// @Attention         使用前请卸载咸鱼，挂载脚本然后使用
 // @Attention         如需引用请注明出处，谢谢合作！
 // @Version           V1.0.06
 // @ScriptURL         https://raw.githubusercontent.com/ddgksf2013/Rewrite/refs/heads/master/AdBlock/GoofishAds.conf
