--- a/AdBlock/GoofishAds.conf
+++ b/AdBlock/GoofishAds.conf
@@ -11,7 +11,7 @@
 // @Suitable          自行观看“# > ”注释内容
 // @Attention         使用前请卸载咸鱼，挂载脚本然后使用
 // @Attention         如需引用请注明出处，谢谢合作！
-// @Version           V1.0.7
+// @Version           V1.0.8
 // @ScriptURL         https://raw.githubusercontent.com/ddgksf2013/Rewrite/refs/heads/master/AdBlock/GoofishAds.conf
 // ==/UserScript==
 
@@ -23,28 +23,28 @@ hostname = acs.m.goofish.com, g-acs.m.goofish.com
 host-suffix,iyes.youku.com,reject
 
 # > 开屏广告@ddgksf2013
-^https?:\/\/acs\.m\.goofish\.com\/gw\/mtop.*splash\.ads url reject-200
+^https?:\/\/(g-)?acs\.m\.goofish\.com\/gw\/mtop.*splash\.ads url reject-200
 # > 开屏通用广告@ddgksf2013
-https://g-acs.m.goofish.com/gw/mtop.idle.ad.expose url reject-200
+https://(g-)?acs.m.goofish.com/gw/mtop.idle.ad.expose url reject-200
 # > 首页顶部Tab@ddgksf2013
-^https?:\/\/acs\.m\.goofish\.com\/gw\/mtop.taobao.idlehome.home.circle.list url jsonjq-response-body '.data.circleList |= map(select(.bizCode != "saveMoney"))'
+^https?:\/\/(g-)?acs\.m\.goofish\.com\/gw\/mtop.taobao.idlehome.home.circle.list url jsonjq-response-body '.data.circleList |= map(select(.bizCode != "saveMoney"))'
 # > 首页信息流@ddgksf2013
-^https?:\/\/acs\.m\.goofish\.com\/gw\/mtop.taobao.idlehome.home.nextfresh url jsonjq-response-body '.data.homeTopList |= [ .[0] ] | .data.sections |= map(select(.data.bizType == "item"))'
+^https?:\/\/(g-)?acs\.m\.goofish\.com\/gw\/mtop.taobao.idlehome.home.nextfresh url jsonjq-response-body '.data.homeTopList |= [ .[0] ] | .data.sections |= map(select(.data.bizType == "item"))'
 # > 搜索填词@ddgksf2013
-^https?:\/\/acs\.m\.goofish\.com\/gw\/mtop.taobao.idlemtopsearch.search.shade url jsonjq-response-body '.data.singleShadeWords =[{}]'
+^https?:\/\/(g-)?acs\.m\.goofish\.com\/gw\/mtop.taobao.idlemtopsearch.search.shade url jsonjq-response-body '.data.singleShadeWords =[{}]'
 # > 猜你可能找@ddgksf2013
-^https?:\/\/acs\.m\.goofish\.com\/gw\/mtop.taobao.idlemtopsearch.item.search.activate url jsonjq-response-body '.data.cardList = [{}]'
+^https?:\/\/(g-)?acs\.m\.goofish\.com\/gw\/mtop.taobao.idlemtopsearch.item.search.activate url jsonjq-response-body '.data.cardList = [{}]'
 # > 搜索发现@ddgksf2013
-^https?:\/\/acs\.m\.goofish\.com\/gw\/mtop.taobao.idlemtopsearch.search.discover url jsonjq-response-body 'del(.data.resultList)'
+^https?:\/\/(g-)?acs\.m\.goofish\.com\/gw\/mtop.taobao.idlemtopsearch.search.discover url jsonjq-response-body 'del(.data.resultList)'
 # > 我的页面@ddgksf2013
-^https?:\/\/acs\.m\.goofish\.com\/gw\/mtop.idle.user.page.my.adapter url jsonjq-response-body '.data.ability=[] | .data.container.sections |= map(select(.sectionBizCode | test("head|user|trade")))'
+^https?:\/\/(g-)?acs\.m\.goofish\.com\/gw\/mtop.idle.user.page.my.adapter url jsonjq-response-body '.data.ability=[] | .data.container.sections |= map(select(.sectionBizCode | test("head|user|trade")))'
 # > 我的页面信息流处理@ddgksf2013
-^https?:\/\/acs\.m\.goofish\.com\/gw\/mtop.taobao.idle.item.buy.feeds url jsonjq-response-body '.data.sections = [{}]'
+^https?:\/\/(g-)?acs\.m\.goofish\.com\/gw\/mtop.taobao.idle.item.buy.feeds url jsonjq-response-body '.data.sections = [{}]'
 # > 本地信息流AD@ddgksf2013
-^https?:\/\/acs\.m\.goofish\.com\/gw\/mtop.taobao.idle.local.home url jsonjq-response-body '.data.sections |= map(select(.data.bizType == "item"))'
+^https?:\/\/(g-)?acs\.m\.goofish\.com\/gw\/mtop.taobao.idle.local.home url jsonjq-response-body '.data.sections |= map(select(.data.bizType == "item"))'
 # > 搜索结果信息流AD@ddgksf2013
-^https?:\/\/acs\.m\.goofish\.com\/gw\/mtop.taobao.idlemtopsearch.search url jsonjq-response-body '.data.resultList |= map(select(.data.item.main.clickParam.args.biz_type == "item"))'
+^https?:\/\/(g-)?acs\.m\.goofish\.com\/gw\/mtop.taobao.idlemtopsearch.search url jsonjq-response-body '.data.resultList |= map(select(.data.item.main.clickParam.args.biz_type == "item"))'
 # > 商品底部推荐商品信息流AD@ddgksf2013 
-^https?:\/\/acs\.m\.goofish\.com\/gw\/mtop.taobao.idle.item.recommend url jsonjq-response-body '.data.cardList |= map(select(.cardData.bizType != "mamaAD"))'
+^https?:\/\/(g-)?acs\.m\.goofish\.com\/gw\/mtop.taobao.idle.item.recommend url jsonjq-response-body '.data.cardList |= map(select(.cardData.bizType != "mamaAD"))'
 # > AMDC处理@ddgksf2013
 ^http:\/\/[a-zA-Z0-9_-]+(\.[a-zA-Z0-9_-]+){1,4}(:\d+)?\/amdc\/mobileDispatch url script-response-body https://raw.githubusercontent.com/ddgksf2013/Scripts/refs/heads/master/amdc.js
