--- a/AdBlock/GoofishAds.conf
+++ b/AdBlock/GoofishAds.conf
@@ -1,7 +1,7 @@
 // ==UserScript==
 // @ScriptName        咸鱼净化[墨鱼版]
 // @Author            @ddgksf2013
-// @Function          如果有需要的去除广告的APP，可自行在共享表格中添加需求
+// @Function          如果有需要的去除开屏广告的APP，可自行在共享表格中添加需求
 // @AddRequest        https://bit.ly/addRequestforAdBlock
 // @WechatID          墨鱼手记
 // @TgChannel         https://t.me/ddgksf2021
@@ -11,7 +11,7 @@
 // @Suitable          自行观看“# > ”注释内容
 // @Attention         使用前请卸载咸鱼，挂载脚本然后使用
 // @Attention         如需引用请注明出处，谢谢合作！
-// @Version           V1.0.8
+// @Version           V1.0.9
 // @ScriptURL         https://raw.githubusercontent.com/ddgksf2013/Rewrite/refs/heads/master/AdBlock/GoofishAds.conf
 // ==/UserScript==
 
