--- a/AdBlock/GoofishAds.conf
+++ b/AdBlock/GoofishAds.conf
@@ -1,5 +1,5 @@
 // ==UserScript==
-// @ScriptName        咸鱼净化[墨鱼版]
+// @ScriptName        小黄鱼净化[墨鱼版]
 // @Author            @ddgksf2013
 // @Function          如果有需要的去除开屏广告的APP，可自行在共享表格中添加需求
 // @AddRequest        https://bit.ly/addRequestforAdBlock
