--- a/AdBlock/GoofishAds.conf
+++ b/AdBlock/GoofishAds.conf
@@ -25,7 +25,7 @@ host-suffix,iyes.youku.com,reject
 # > 开屏广告@ddgksf2013
 ^https?:\/\/(g-)?acs\.m\.goofish\.com\/gw\/mtop.*splash\.ads url reject-200
 # > 开屏通用广告@ddgksf2013
-https://(g-)?acs.m.goofish.com/gw/mtop.idle.ad.expose url reject-200
+^https?:\/\/(g-)?acs\.m\.goofish\.com\/gw\/mtop.idle.ad.expose url reject-200
 # > 首页顶部Tab@ddgksf2013
 ^https?:\/\/(g-)?acs\.m\.goofish\.com\/gw\/mtop.taobao.idlehome.home.circle.list url jsonjq-response-body '.data.circleList |= map(select(.bizCode != "saveMoney"))'
 # > 首页信息流@ddgksf2013
