--- a/AdBlock/GoofishAds.conf
+++ b/AdBlock/GoofishAds.conf
@@ -11,7 +11,7 @@
 // @Suitable          自行观看“# > ”注释内容
 // @Attention         使用前请卸载咸鱼，挂载脚本然后使用
 // @Attention         如需引用请注明出处，谢谢合作！
-// @Version           V1.0.9
+// @Version           V1.0.10
 // @ScriptURL         https://raw.githubusercontent.com/ddgksf2013/Rewrite/refs/heads/master/AdBlock/GoofishAds.conf
 // ==/UserScript==
 
@@ -24,6 +24,8 @@ host-suffix,iyes.youku.com,reject
 
 # > 开屏广告@ddgksf2013
 ^https?:\/\/(g-)?acs\.m\.goofish\.com\/gw\/mtop.*splash\.ads url reject-200
+# > 首页右下角悬浮球@ddgksf2013
+https://acs.m.goofish.com/gw/mtop.taobao.idle.user.strategy.list url jsonjq-response-body '.data.strategies = [{}]'
 # > 开屏通用广告@ddgksf2013
 ^https?:\/\/(g-)?acs\.m\.goofish\.com\/gw\/mtop.idle.ad.expose url reject-200
 # > 首页顶部Tab@ddgksf2013
