--- a/AdBlock/GoofishAds.conf
+++ b/AdBlock/GoofishAds.conf
@@ -25,7 +25,7 @@ host-suffix,iyes.youku.com,reject
 # > 开屏广告@ddgksf2013
 ^https?:\/\/(g-)?acs\.m\.goofish\.com\/gw\/mtop.*splash\.ads url reject-200
 # > 首页右下角悬浮球@ddgksf2013
-https://acs.m.goofish.com/gw/mtop.taobao.idle.user.strategy.list url jsonjq-response-body '.data.strategies = [{}]'
+^https?:\/\/(g-)?acs\.m\.goofish\.com\/gw\/mtop.taobao.idle.user.strategy.list url jsonjq-response-body '.data.strategies = [{}]'
 # > 开屏通用广告@ddgksf2013
 ^https?:\/\/(g-)?acs\.m\.goofish\.com\/gw\/mtop.idle.ad.expose url reject-200
 # > 首页顶部Tab@ddgksf2013
