--- a/AdBlock/WeiboAds.conf
+++ b/AdBlock/WeiboAds.conf
@@ -5,13 +5,13 @@
 // @TgChannel         https://t.me/ddgksf2021
 // @Contribute        https://t.me/ddgksf2013_bot
 // @Feedback          📮 ddgksf2013@163.com 📮
-// @UpdateTime        2025-09-15
+// @UpdateTime        2025-09-16
 // @Attention         微博、微博国际版净化，现已二合一，使用中若有问题请发邮件！
 // @Attention         使用时请注意关闭QuantumultX的[兼容性增强]开关，否则无法去除微博广告
 // @Suitable          自行观看“# > ”注释内容
 // @Contributors      @zmqcherish
 // @Attention         如需引用请注明出处，谢谢合作！
-// @Version           V2.0.113
+// @Version           V2.0.114
 // @ScriptURL         https://raw.githubusercontent.com/ddgksf2013/Rewrite/refs/heads/master/AdBlock/WeiboAds.conf
 // ==/UserScript==
 
@@ -106,7 +106,8 @@
 # [+]2024-12-22  87、修复微博搜索页搜索框默认填词失效及搜索框猜你想搜问题
 # [+]2024-01-26  88、修复微博搜索页搜索框默认填词失效及首页顶部新出的直播及发现页中部的广告
 # [+]2024-08-08  88、去除首页顶部浮窗推广、首页信息流可能感兴趣的推广、删除侧栏的视频流
-# [+]2024-08-15  89、优化净化规则，去除了搜索页信息流及相关推广，仅保留微博热搜内容[热搜样式调整为单列]，同时屏蔽了“更多热搜”子页面的推广，让页面更干净
+# [+]2024-09-15  89、优化净化规则，去除了搜索页信息流及相关推广，仅保留微博热搜内容[热搜样式调整为单列]，同时屏蔽了“更多热搜”子页面的推广，让页面更干净
+# [+]2024-09-16  90、去除帖子详情页的“大家都在搜”、“博主好物种草”、“关注推荐”，评论区的广告推荐、AI总结
 
 
 hostname = api.weibo.*, *.api.weibo.*, mapi.weibo.*, *.uve.weibo.com, new.vip.weibo.cn, boot.biz.weibo.com
