--- a/AdBlock/XiaoYuZhouAds.conf
+++ b/AdBlock/XiaoYuZhouAds.conf
@@ -17,12 +17,12 @@
 hostname = api.xiaoyuzhoufm.com, 118.31.123.175, 112.124.203.116, 118.31.125.171, 47.57.181.112, 47.57.182.96
 
 # > 搜索推广@ddgksf2013
-^https?:\/\/api\.xiaoyuzhoufm\.com\/v\d\/search\/get-express
+^https?:\/\/api\.xiaoyuzhoufm\.com\/v\d\/search\/get-express url reject-200
 # > 搜索填词@ddgksf2013
-^https?:\/\/api\.xiaoyuzhoufm\.com\/v\d\/search\/get-preset
+^https?:\/\/api\.xiaoyuzhoufm\.com\/v\d\/search\/get-preset url reject-200
 # > 搜索建议@ddgksf2013
-^https?:\/\/api\.xiaoyuzhoufm\.com\/v\d\/category\/list-daily-suggestion
+^https?:\/\/api\.xiaoyuzhoufm\.com\/v\d\/category\/list-daily-suggestion url reject-200
 # > 开屏广告@ddgksf2013
-^https?:\/\/api\.xiaoyuzhoufm\.com\/v\d\/flash-screen\/list
+^https?:\/\/api\.xiaoyuzhoufm\.com\/v\d\/flash-screen\/list url reject-200
 # > 首页信息流推广@ddgksf2013
 ^https?:\/\/api\.xiaoyuzhoufm\.com\/v\d\/discovery-feed\/list url jsonjq-response-body '.data |= map(select(.type != "DISCOVERY_BANNER"))'
