--- a/AdBlock/ChinaUnicomAds.conf
+++ b/AdBlock/ChinaUnicomAds.conf
@@ -40,4 +40,4 @@ host-suffix, ad.10010.com, reject
 # > 本地图片推广@ddgksf2013
 ^https?:\/\/m\.client\.10010\.com\/clientMyPage\/v\d\/api\/getDeviceInfo url jsonjq-response-body '.data={}'
 # > 首页瀑布流@ddgksf2013
-^https?:\/\/img\.client\.10010\.com\/homejingxuan12\/js\/(pubuliu|homeView) url reject
+^https?:\/\/img\.client\.10010\.com\/homejingxuan12\/js\/(pubuliu|1homeView) url reject
